# mini-eth-node

./: Cargo.toml  README.md
core/execution/src/: error.rs  in_memory.rs  lib.rs  pipeline.rs
core/networking/src/: lib.rs
core/rlp-codec/src/: lib.rs
execution/: Cargo.toml
execution/src/: cached.rs  error.rs  executor.rs  in_memory.rs  lib.rs  pipeline.rs  primitives.rs  providers.rs
networking/src/: codec.rs
processor/: Cargo.toml
processor/src/: block_processor.rs  errors.rs  lib.rs
rlp-codec/: Cargo.toml
rlp-codec/src/: decoder.rs  encoder.rs  error.rs  item.rs  lib.rs  traits.rs
types/: Cargo.toml
types/src/: address.rs  b256.rs  bloom.rs  execution_error.rs  lib.rs  transaction.rs
